documentacao da api no swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ quarkus.mongodb.connection-string=mongodb+srv://jcabral:9wmPRPKXdgqcHqI6@cluster
 # mandatory if you don't specify the name of the database using @MongoEntity
 quarkus.mongodb.database=encrypt-url
 
-# quarkus.swagger-ui.always-include=true
-# quarkus.swagger-ui.path=/swagger-ui
+
+quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.path=/swagger-ui
