--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ quarkus.mongodb.database=encrypt-url
 
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
+quarkus.http.port=${PORT:8080}
