--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ quarkus.mongodb.database=encrypt-url
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
 quarkus.http.port=${PORT:8080}
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+
