--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-#quarkus.mongodb.connection-string=mongodb+srv://jcabral:9wmPRPKXdgqcHqI6@cluster0.s9efpek.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-
-quarkus.mongodb.connection-string=mongodb+srv://jcabral:9wmPRPKXdgqcHqI6@cluster0.s9efpek.mongodb.net
-# mandatory if you don't specify the name of the database using @MongoEntity
-quarkus.mongodb.database=encrypt-url
+quarkus.mongodb.connection-string=${env.DATABASE}
+quarkus.mongodb.database=${env.DATABASE_NAME}
 
 
 quarkus.swagger-ui.always-include=true
