(feat): ajustes nas variaveis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-quarkus.mongodb.connection-string=${env.DATABASE}
-quarkus.mongodb.database=${env.DATABASE_NAME}
+quarkus.mongodb.connection-string=${DATABASE}
+quarkus.mongodb.database=${DATABASE_NAME}
 
 
 quarkus.swagger-ui.always-include=true
