--- a/.github/workflows/github-action-docker.yml
+++ b/.github/workflows/github-action-docker.yml
@@ -16,19 +16,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # Instalar Docker
-      - name: Set up Docker
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker.io
-
       # Fazer o build da imagem Docker
       - name: Build Docker image
         run: docker build -t ozteps/cryptlink-api:latest .
 
       # Fazer login no Docker Hub
       - name: Docker Login
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
 
       # Fazer push da imagem para o Docker Hub
       - name: Push Docker image
